tdf#106929 sw: SwCursorShell::Pop() ensure cursor ring is recreated

... from table cursor.  The problem is that in this case, between
Push() and Pop() there is no call to ClearMark() or any of the other
functions that sets the SwTableCursor::m_bChanged flag, so MakeBoxSels()
is never called for the m_pCurrentCursor after Pop() and there is no
cursor ring selecting all table cells.

(regression from b227a8e4d65e4bbfe991aed9342fe3e30eca8639)

Change-Id: I5bce18b71fed60a926f4ddf9938dfb7d1ddf4e92
(cherry picked from commit c72b9c1dc5683a132bf00659e0c8556253340c97)